fixed contact page spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -488,7 +488,6 @@ header .img-container > img {
 }
 
 #contact .contact{
-	margin-top: 30px;
 	display: flex;
 	align-items: center;
 }
@@ -619,7 +618,7 @@ header .img-container > img {
 
 	/* Contact section */
 	#contact .contact{
-		margin-top: 100px;
+		margin-top: 25px;
 	}
 
 }
@@ -696,10 +695,6 @@ header .img-container > img {
 			border-width: 8px 8px 8px 16px;;
 			border-left-color: var(--primary-color);
 			right: -22px;
-		}
-
-		#contact{
-			height: 100vh;
 		}
 
 		.contact-container{
